2006-03-21  Paul J Stevens <paul@nfg.nl>

	* imapcommands.c:
	check for invalid characters in _ic_create and _ic_rename
	* sql/postgresql/add_auto_replies_fields.pgsql, 
	  sql/postgresql/add_usermap.psql:
	add missing statements in postgres sql files
	* test-scripts/testimap.py, check_dbmail_db.c, check_dbmail_dsn.c,
	check_dbmail_imapd.c:
	cleanups
	* ChangeLog, dbmail-imapsession.c, dbmailtypes.h, debug.c, misc.c:
	make INTERNALDATE response rfc compliant (closes: #300)
	* Makefile.am, check_dbmail_db.c:
	add testframe for db.c
	* debug.c, debug.h:
	make trace level=0 really silent except for fatal errors
	* modules/dbmysql.c, db.c:
	fix db_query for mysql so it doesn't ignore some errors

2006-03-20  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog, tags:
	remove tags file
	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.c, imapcommands.c, 
	  test-scripts/testimap.py:
	merge and finish Matthews patch to deal with too-long imapcommands
	* db.c, misc.c, test-scripts/testimap.py:
	merge Matthews patch for allowing single-quotes in mailbox names

2006-03-18  Paul J Stevens <paul@nfg.nl>

	* timsieve.c:
	excessive if/then depth cleanup
	* main.c:
	use delivered-to header for default delivery
	* main.c:
	restore -u delivery for dbmail-smtp

2006-03-17  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/dbmail.logrotate:
	added debian/dbmail.logrotate
	* debian/dbmail.postinst, debian/rules:
	call ldconfig and install logrotate file
	* timsieve.c:
	replace fprintf calls with ci_write wrapper
	* debug.c:
	fix race condition in accessing va_list in trace calls
	* debian/control:
	update for allowing builds on amd64
	* debian/changelog, debian/control, debian/rules:
	fix debian build
	* acinclude.m4, configure.in, dbmail.h.in, debian/rules:
	fix autobuild chain to allow for sane defaults
	* check_dbmail_imapd.c:
	fix testcases after mime.c cleanup
	* server.c:
	fix unlinking of unix socket on exit
	* serverchild.c:
	make accept failure fail louder