@@ -60,12 +60,13 @@ IMAP_BEFORE_SMTP=no     # If yes, allows SMTP access from the host IP connecting
 PORT=2000               # Port to bind to.
 
 [LDAP]
+PORT=389
+VERSION=3
+HOSTNAME=ldap
 BASE_DN=ou=People,dc=mydomain,dc=com
 BIND_DN=cn=admin,dc=mydomain,dc=com
 BIND_PW=password
 SCOPE=SubTree
-PORT=389
-HOSTNAME=ldap
 USER_OBJECTCLASS=top,account,dbmailUser
 FORW_OBJECTCLASS=top,account,dbmailForwardingAddress
 CN_STRING=uid
